# email-service-client

./: .pre-commit-config.yaml  README.md  pyproject.toml  settings.py
.github/workflows/: cd.yml  ci.yml
client/: __init__.py  resources.py
email_service_client/client/: __init__.py  constants.py  resources.py  types.py
email_service_client/tests/unit_tests/: base.py  email_identity_resource_tests.py
tests/unit_tests/: base.py  email_identity_resource_tests.py
