[tool.poetry]
name = "email-service-client"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "email_service_client"}]


[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
python-dotenv = "^0.21.1"
requests-toolbelt = "^0.10.1"

[tool.poetry.dev.dependencies]
pytest = "^7.2.1"

[tool.poetry.group.cq.dependencies]
black = "^22.12.0"
mypy = "^0.991"
pre-commit = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
